# tinycmmc

./: CMakeLists.txt  FindMPG123.cmake  FindModPlug.cmake  FindOgg.cmake  FindOpus.cmake  FindOpusfile.cmake  FindSquirrel.cmake  FindVorbisfile.cmake  LICENSE.md  MaximumWarnings.cmake  README.md  default.nix  flake.nix  tinycmmc.nix  tinycmmcConfig.cmake.in
modules/: ExportAndInstallLibrary.cmake  FindMPG123.cmake  FindMad.cmake  FindOpusfile.cmake  FindSquirrel.cmake  Findspnav.cmake  GetProjectVersion.cmake  MaximumWarnings.cmake  TinyCMMC.cmake
modules/tinycmmc/: ExportAndInstallLibrary.cmake  FindDependency.cmake  MaximumWarnings.cmake
